--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Logan Howitt</title>
+    </head>
+    <body>
+        <h1>Logan Howitt's CSCE 190 Site</h1>
+
+        <section class="assignment">
+            <a href="Files/Problem Statement.pdf"><img src="images/Problem Statement.png"></a>
+            <section class="ass-details">
+                <a href="Files/Problem Statement.pdf"><h2>Problem Statement: Parking App </h2></a>
+                <p>Our users are struggling to find affordable and available parking in major cities. Our solution to this should provide users with available parking and the rate for parking at that specific place, because everyone's budget for parking will differ.</p>
+            </section>
+        </section>
+    </body>
+</html>
