--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <body>
         <h1>Logan Howitt's CSCE 190 Site</h1>
 
+        <!--Problem Statement Assignment-->
         <section class="assignment">
-            <a href="Files/Problem Statement.pdf"><img src="images/Problem Statement.png"></a>
+            <a href="Files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
             <section class="ass-details">
-                <a href="Files/Problem Statement.pdf"><h2>Problem Statement: Parking App </h2></a>
+                <a href="Files/problem-statement.pdf"><h2>Problem Statement: Parking App </h2></a>
                 <p>Our users are struggling to find affordable and available parking in major cities. Our solution to this should provide users with available parking and the rate for parking at that specific place, because everyone's budget for parking will differ.</p>
+            </section>
+        </section>
+
+        <!--Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="Files/affinity-diagram.pdf"><img src="Images/affinity-diagram.png"></a>
+            <section class="ass-details">
+                <a href="Files/affinity-diagram.pdf"><h2>Affinity Diagram: Parking App </h2></a>
+                <p>My group and I worked together to come up with possible ways to implement our ideas and who this app is going to be desined for.</p>
             </section>
         </section>
     </body>
